Правки по элипсам

--- a/scss/blocks/_cta.scss
+++ b/scss/blocks/_cta.scss
@@ -9,7 +9,7 @@
     &::before {
       content: '';
       position: absolute;
-      background-image: url('./../../images/elips-bg.svg');
+      background-image: url('./../images/elips-bg.svg');
       height: 176px;
       width: 445px;
       background-repeat: no-repeat;
