--- a/scss/blocks/_price.scss
+++ b/scss/blocks/_price.scss
@@ -12,7 +12,7 @@
       width: 108px;
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url('./../../images/elips-sm.svg');
+      background-image: url('./../images/elips-sm.svg');
     }
   }
 
