--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,11 @@ a {
   text-decoration: none;
   color: #3e3727;
   font-size: 20px;
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+a:hover {
+  color: #8f4b3b;
 }
 
 .container {
@@ -201,11 +206,22 @@ a {
 .section {
   margin-bottom: 70px;
 }
+@media screen and (max-width: 1024px) {
+  .section {
+    margin-bottom: 50px;
+  }
+}
 
 .title {
   font-size: 48px;
   font-weight: 400;
   color: #3e3727;
+}
+@media screen and (max-width: 1024px) {
+  .title {
+    font-size: 24px;
+    line-height: 38px;
+  }
 }
 
 .no-scroll {
@@ -228,24 +244,66 @@ a {
   gap: 5px;
   font-size: 20px;
   margin-top: auto;
-  padding: 22px 25px;
+  padding: 10px 25px;
   border-radius: 20px;
   -ms-flex-item-align: start;
       align-self: flex-start;
   font-weight: 400;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+.link-to:hover {
+  background-color: rgba(78, 26, 14, 0.75);
+  color: #ffffff;
+}
+@media screen and (max-width: 1024px) {
+  .link-to {
+    padding: 10px 15px;
+    font-size: 14px;
+  }
+  .link-to img {
+    width: 20px;
+    height: 20px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .link-to--intro {
+    position: absolute;
+    bottom: -40px;
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
+  }
 }
 .link-to--pinterest {
-  padding: 10px;
+  padding: 10px 15px 10px 25px;
   text-align: center;
+}
+@media screen and (max-width: 1024px) {
+  .link-to--pinterest {
+    padding: 13px 25px;
+  }
+}
+.link-to--cta {
+  margin: 0 auto;
 }
 .link-to--scroll-top {
   padding: 15px;
   margin-top: 10px;
 }
+@media screen and (max-width: 1024px) {
+  .link-to--scroll-top {
+    display: none;
+  }
+}
 
 .header {
   padding: 20px 0;
   margin-bottom: 70px;
+}
+@media screen and (max-width: 1024px) {
+  .header {
+    margin-bottom: 20px;
+  }
 }
 .header__inner {
   display: -webkit-box;
@@ -271,6 +329,131 @@ a {
   gap: 50px;
 }
 
+.header__nav-btn {
+  position: relative;
+  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 27px;
+  background-color: transparent;
+  width: 40px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.nav-icon-btn {
+  padding: 0;
+  border: none;
+  width: 100%;
+  display: block;
+  height: 2px;
+  background-color: #3e3727;
+}
+.nav-icon-btn::before {
+  position: absolute;
+  border: none;
+  width: 100%;
+  display: block;
+  height: 2px;
+  top: 0;
+  left: 0;
+  background-color: #3e3727;
+  content: "";
+}
+.nav-icon-btn::after {
+  position: absolute;
+  border: none;
+  width: 100%;
+  display: block;
+  height: 2px;
+  bottom: 1px;
+  left: 0;
+  background-color: #3e3727;
+  content: "";
+}
+.nav-icon-btn--active {
+  background-color: transparent;
+}
+.nav-icon-btn--active::before {
+  top: 23px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.nav-icon-btn--active::after {
+  bottom: 2px;
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+
+@media screen and (max-width: 998px) {
+  .header__inner--mobile {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #a4a96b;
+    z-index: 11;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding: 30px 30px 0 30px;
+  }
+  .header__inner--mobile .header__nav-btn {
+    position: fixed;
+    right: 30px;
+    top: 40px;
+  }
+  .header__inner--mobile .header__nav {
+    display: block;
+    margin-left: auto;
+    padding-top: 100px;
+    padding-right: 70px;
+  }
+  .header__inner--mobile .header__nav-item {
+    margin-bottom: 20px;
+  }
+  .header__inner--mobile .nav__list {
+    margin-top: 30px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 998px) {
+  .header__nav {
+    display: none;
+  }
+}
+
+.header__nav-btn {
+  display: none;
+}
+@media screen and (max-width: 998px) {
+  .header__nav-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    padding-bottom: 50px;
+  }
+}
 .intro__inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -278,6 +461,7 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
 }
 .intro__content {
   display: -webkit-box;
@@ -291,9 +475,19 @@ a {
 .intro__title {
   position: relative;
 }
+@media screen and (max-width: 1024px) {
+  .intro__title {
+    margin-bottom: 15px;
+  }
+}
 .intro__title span {
   display: block;
   margin-bottom: 20px;
+}
+@media screen and (max-width: 1024px) {
+  .intro__title span {
+    margin-bottom: 0;
+  }
 }
 .intro__title::before {
   content: "";
@@ -306,14 +500,39 @@ a {
   background-size: cover;
   background-image: url("./../images/elips-sm.svg");
 }
+@media screen and (max-width: 1024px) {
+  .intro__title::before {
+    left: 5px;
+    bottom: 7px;
+  }
+}
 .intro__description {
   font-size: 36px;
   font-weight: 400;
   width: 100%;
   max-width: 525px;
 }
+@media screen and (max-width: 1024px) {
+  .intro__description {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 50px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .intro__photo {
+    height: 165px;
+  }
+}
 .intro__photo-img {
   border-radius: 0 0 0 150px;
+}
+@media screen and (max-width: 1024px) {
+  .intro__photo-img {
+    width: 165px;
+    height: 165px;
+    border-radius: 0 0 0 55px;
+  }
 }
 
 .about__inner {
@@ -325,17 +544,63 @@ a {
           justify-content: space-between;
   gap: 120px;
 }
+@media screen and (max-width: 1024px) {
+  .about__inner {
+    gap: 15px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .about__content {
+    display: none;
+  }
+}
 .about__title {
   margin-bottom: 20px;
+}
+@media screen and (max-width: 1024px) {
+  .about__title {
+    line-height: 1.2;
+    margin-bottom: 15px;
+    font-size: 20px;
+  }
 }
 .about__description {
   font-size: 20px;
   font-weight: 400;
 }
+@media screen and (max-width: 1024px) {
+  .about__description {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
 .about__description-text:not(:last-child) {
   margin-bottom: 20px;
 }
+.about__photo .about__content {
+  display: none;
+}
+@media screen and (max-width: 1024px) {
+  .about__photo {
+    height: 165px;
+  }
+  .about__photo-img {
+    width: 165px;
+    height: 165px;
+    float: left;
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+  .about__photo .about__content {
+    display: block;
+  }
+}
 
+@media screen and (max-width: 1024px) {
+  .project {
+    margin-top: 120px;
+  }
+}
 .project__inner {
   text-align: center;
 }
@@ -347,11 +612,29 @@ a {
   position: relative;
   margin-bottom: 330px;
 }
+@media screen and (max-width: 1024px) {
+  .project__items {
+    margin-bottom: 0;
+  }
+}
 .project__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 100px;
+}
+@media screen and (max-width: 1024px) {
+  .project__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+  .project__item:last-child {
+    margin-bottom: 30px;
+  }
 }
 .project__item:nth-child(odd) {
   -webkit-box-pack: end;
@@ -363,6 +646,13 @@ a {
   text-align: right;
   position: relative;
 }
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(odd) .project__item-content {
+    padding-top: 0;
+    text-align: center;
+    position: static;
+  }
+}
 .project__item:nth-child(odd) .project__item-content::after {
   content: "";
   position: absolute;
@@ -372,16 +662,39 @@ a {
   height: 100px;
   background-color: #a4a96b;
 }
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(odd) .project__item-content::after {
+    display: none;
+  }
+}
 .project__item:nth-child(even) {
   position: absolute;
+}
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(even) {
+    position: relative;
+  }
 }
 .project__item:nth-child(even) .project__item-content {
   margin-top: auto;
   padding-bottom: 30px;
   text-align: left;
 }
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(even) .project__item-content {
+    padding-bottom: 0;
+    text-align: center;
+  }
+}
 .project__item:nth-child(even) .project__item-photo {
   position: relative;
+}
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(even) .project__item-photo {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
 }
 .project__item:nth-child(even) .project__item-photo::after {
   content: "";
@@ -392,14 +705,35 @@ a {
   height: 250px;
   background-color: #a4a96b;
 }
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(even) .project__item-photo::after {
+    display: none;
+  }
+}
 .project__item:nth-child(2) {
   top: 197px;
+}
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(2) {
+    top: 0;
+  }
 }
 .project__item:nth-child(3) {
   margin-top: 165px;
 }
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(3) {
+    top: 0;
+    margin-top: 0;
+  }
+}
 .project__item:nth-child(4) {
   top: 748px;
+}
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(4) {
+    top: 0;
+  }
 }
 .project__item:nth-child(4) .project__item-content {
   position: relative;
@@ -413,6 +747,11 @@ a {
   height: 100px;
   background-color: #a4a96b;
 }
+@media screen and (max-width: 1024px) {
+  .project__item:nth-child(4) .project__item-content::after {
+    display: none;
+  }
+}
 .project__item-year {
   font-size: 20px;
   font-weight: 400;
@@ -422,20 +761,45 @@ a {
   display: inline-block;
   margin-bottom: 20px;
 }
+@media screen and (max-width: 1024px) {
+  .project__item-year {
+    font-size: 14px;
+  }
+}
 .project__item-name {
   font-size: 20px;
   font-weight: 400;
 }
+@media screen and (max-width: 1024px) {
+  .project__item-name {
+    font-size: 16px;
+  }
+}
 .project__item-photo {
   padding-top: 40px;
 }
+@media screen and (max-width: 1024px) {
+  .project__item-photo {
+    padding-top: 0;
+  }
+}
 .project__item-img {
   border-radius: 20px;
+}
+@media screen and (max-width: 1024px) {
+  .project__item-img {
+    width: 350px;
+  }
 }
 
 .price__title {
   position: relative;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 1024px) {
+  .price__title {
+    text-align: center;
+  }
 }
 .price__title::before {
   content: "";
@@ -448,6 +812,13 @@ a {
   background-size: cover;
   background-image: url("./../images/elips-sm.svg");
 }
+@media screen and (max-width: 1024px) {
+  .price__title::before {
+    width: 91px;
+    left: 169px;
+    height: 53px;
+  }
+}
 .price__description {
   width: 100%;
   max-width: 530px;
@@ -456,6 +827,16 @@ a {
   font-size: 20px;
   font-weight: 400;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 1024px) {
+  .price__description {
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    font-size: 14px;
+    max-width: 298px;
+    line-height: 1.5;
+  }
 }
 .price__items {
   display: -webkit-box;
@@ -468,6 +849,11 @@ a {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+@media screen and (max-width: 1024px) {
+  .price__items {
+    gap: 20px;
+  }
+}
 .price__item {
   width: 100%;
   max-width: 500px;
@@ -476,6 +862,11 @@ a {
   padding: 20px 20px 30px 20px;
   background-color: rgba(164, 169, 107, 0.15);
 }
+@media screen and (max-width: 1024px) {
+  .price__item {
+    padding: 14px 14px 20px 14px;
+  }
+}
 .price__item-title {
   font-size: 32px;
   margin-bottom: 20px;
@@ -483,14 +874,30 @@ a {
   color: #3e3727;
   text-align: center;
 }
+@media screen and (max-width: 1024px) {
+  .price__item-title {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+}
 .price__item-total {
   font-size: 20px;
   font-weight: 400;
+}
+@media screen and (max-width: 1024px) {
+  .price__item-total {
+    font-size: 16px;
+  }
 }
 .price__list {
   margin-left: 20px;
   font-size: 20px;
   margin-bottom: 50px;
+}
+@media screen and (max-width: 1024px) {
+  .price__list {
+    font-size: 16px;
+  }
 }
 .price__list-item {
   list-style-type: disc;
@@ -514,12 +921,26 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media screen and (max-width: 1024px) {
+  .cta__title::before {
+    width: 192px;
+    height: 76px;
+    left: 56px;
+    bottom: 16px;
+  }
+}
 .cta__description {
   font-size: 20px;
   margin-bottom: 30px;
   color: #a4a96b;
   width: 100%;
   max-width: 521px;
+}
+@media screen and (max-width: 1024px) {
+  .cta__description {
+    font-size: 14px;
+    line-height: 1.5;
+  }
 }
 .cta__inner {
   display: -webkit-box;
@@ -529,10 +950,23 @@ a {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+@media screen and (max-width: 1024px) {
+  .cta__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 .cta__social {
   padding-left: 10px;
   position: relative;
   padding-top: 20px;
+}
+@media screen and (max-width: 1024px) {
+  .cta__social {
+    margin-bottom: 30px;
+  }
 }
 .cta__social::before {
   position: absolute;
@@ -552,6 +986,11 @@ a {
   bottom: 0;
   right: 0;
 }
+@media screen and (max-width: 1024px) {
+  .cta__social::after {
+    left: 100px;
+  }
+}
 .cta__social-item {
   margin-bottom: 20px;
   display: -webkit-box;
@@ -562,9 +1001,24 @@ a {
           align-items: center;
   gap: 10px;
 }
+@media screen and (max-width: 1024px) {
+  .cta__social-item {
+    font-size: 16px;
+  }
+}
 
 .footer {
   margin-bottom: 70px;
+}
+@media screen and (max-width: 1024px) {
+  .footer {
+    border-top: 1px solid #3e3727;
+    padding: 30px 0;
+    margin-bottom: 0;
+  }
+}
+.footer-logo {
+  margin-right: 50px;
 }
 .footer__inner {
   display: -webkit-box;
@@ -585,4 +1039,22 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media screen and (max-width: 1024px) {
+  .footer__nav {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 20px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer__nav-link {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .footer__nav-item {
+    width: 40%;
+  }
 }
