--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -6,18 +6,54 @@
   gap: 5px;
   font-size: 20px;
   margin-top: auto;
-  padding: 22px 25px;
+  padding: 10px 25px;
   border-radius: 20px;
   align-self: flex-start;
   font-weight: 400;
+  transition: all 0.3s linear;
+
+  &:hover {
+    background-color: rgba(#4e1a0e, 75%);
+    color: $white;
+  }
+
+  @media screen and (max-width: 1024px) {
+    padding: 10px 15px;
+    font-size: 14px;
+
+    img {
+      width: 20px;
+      height: 20px;
+    }
+  }
+
+  &--intro {
+    @media screen and (max-width: 1024px) {
+      position: absolute;
+      bottom: -40px;
+      transform: translateX(50%);
+    }
+  }
 
   &--pinterest {
-    padding: 10px;
+    padding: 10px 15px 10px 25px;
     text-align: center;
+
+    @media screen and (max-width: 1024px) {
+      padding: 13px 25px;
+    }
+  }
+
+  &--cta {
+    margin: 0 auto;
   }
 
   &--scroll-top {
     padding: 15px;
     margin-top: 10px;
+
+    @media screen and (max-width: 1024px) {
+      display: none;
+    }
   }
 }
