--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,6 +1,16 @@
 .footer {
   margin-bottom: 70px;
 
+  @media screen and (max-width: 1024px) {
+    border-top: 1px solid $accent;
+    padding: 30px 0;
+    margin-bottom: 0;
+  }
+
+  &-logo {
+    margin-right: 50px;
+  }
+
   &__inner {
     display: flex;
     justify-content: space-between;
@@ -11,5 +21,20 @@
     display: flex;
     gap: 50px;
     align-items: center;
+    @media screen and (max-width: 1024px) {
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: space-between;
+
+      &-link {
+        font-size: 14px;
+      }
+    }
+
+    &-item {
+      @media screen and (max-width: 1024px) {
+        width: 40%;
+      }
+    }
   }
 }
