--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,6 +1,9 @@
 .header {
   padding: 20px 0;
   margin-bottom: 70px;
+  @media screen and (max-width: 1024px) {
+    margin-bottom: 20px;
+  }
 
   &__inner {
     display: flex;
@@ -13,5 +16,109 @@
     justify-content: space-between;
     align-items: center;
     gap: 50px;
+  }
+}
+
+.header__nav-btn {
+  position: relative;
+  z-index: 10;
+  display: flex;
+  height: 27px;
+  background-color: transparent;
+  width: 40px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.nav-icon-btn {
+  padding: 0;
+  border: none;
+  width: 100%;
+  display: block;
+  height: 2px;
+  background-color: $accent;
+  &::before {
+    position: absolute;
+    border: none;
+    width: 100%;
+    display: block;
+    height: 2px;
+    top: 0;
+    left: 0;
+    background-color: $accent;
+    content: '';
+    // transition: transform 0.2s linear;
+  }
+  &::after {
+    position: absolute;
+    border: none;
+    width: 100%;
+    display: block;
+    height: 2px;
+    bottom: 1px;
+    left: 0;
+    background-color: $accent;
+    content: '';
+    // transition: transform 0.2s linear;
+  }
+
+  &--active {
+    background-color: transparent;
+    &::before {
+      top: 23px;
+      transform: rotate(45deg);
+    }
+    &::after {
+      bottom: 2px;
+      transform: rotate(135deg);
+    }
+  }
+}
+
+.header__inner--mobile {
+  @media screen and (max-width: $tablet) {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $ligth-green;
+    z-index: 11;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 30px 30px 0 30px;
+
+    .header__nav-btn {
+      position: fixed;
+      right: 30px;
+      top: 40px;
+    }
+    .header__nav {
+      display: block;
+      margin-left: auto;
+      padding-top: 100px;
+      padding-right: 70px;
+      &-item {
+        margin-bottom: 20px;
+      }
+    }
+
+    .nav__list {
+      margin-top: 30px;
+      flex-direction: column;
+      gap: 30px;
+    }
+  }
+}
+.header__nav {
+  @media screen and (max-width: $tablet) {
+    display: none;
+  }
+}
+
+.header__nav-btn {
+  display: none;
+  @media screen and (max-width: $tablet) {
+    display: flex;
   }
 }
