--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -1,4 +1,8 @@
 .project {
+  @media screen and (max-width: 1024px) {
+    margin-top: 120px;
+  }
+
   &__inner {
     text-align: center;
   }
@@ -11,11 +15,25 @@
   &__items {
     position: relative;
     margin-bottom: 330px;
+
+    @media screen and (max-width: 1024px) {
+      margin-bottom: 0;
+    }
   }
 
   &__item {
     display: flex;
     gap: 100px;
+
+    @media screen and (max-width: 1024px) {
+      flex-direction: column;
+      gap: 20px;
+      margin-bottom: 20px;
+
+      &:last-child {
+        margin-bottom: 30px;
+      }
+    }
 
     &:nth-child(odd) {
       justify-content: flex-end;
@@ -25,6 +43,12 @@
         text-align: right;
         position: relative;
 
+        @media screen and (max-width: 1024px) {
+          padding-top: 0;
+          text-align: center;
+          position: static;
+        }
+
         &::after {
           content: '';
           position: absolute;
@@ -33,6 +57,10 @@
           width: 1px;
           height: 100px;
           background-color: #a4a96b;
+
+          @media screen and (max-width: 1024px) {
+            display: none;
+          }
         }
       }
     }
@@ -40,14 +68,27 @@
     &:nth-child(even) {
       position: absolute;
 
+      @media screen and (max-width: 1024px) {
+        position: relative;
+      }
+
       .project__item-content {
         margin-top: auto;
         padding-bottom: 30px;
         text-align: left;
+
+        @media screen and (max-width: 1024px) {
+          padding-bottom: 0;
+          text-align: center;
+        }
       }
 
       .project__item-photo {
         position: relative;
+
+        @media screen and (max-width: 1024px) {
+          order: 1;
+        }
 
         &::after {
           content: '';
@@ -57,20 +98,37 @@
           width: 1px;
           height: 250px;
           background-color: #a4a96b;
+
+          @media screen and (max-width: 1024px) {
+            display: none;
+          }
         }
       }
     }
 
     &:nth-child(2) {
       top: 197px;
+
+      @media screen and (max-width: 1024px) {
+        top: 0;
+      }
     }
 
     &:nth-child(3) {
       margin-top: 165px;
+
+      @media screen and (max-width: 1024px) {
+        top: 0;
+        margin-top: 0;
+      }
     }
 
     &:nth-child(4) {
       top: 748px;
+
+      @media screen and (max-width: 1024px) {
+        top: 0;
+      }
 
       .project__item-content {
         position: relative;
@@ -83,6 +141,10 @@
           width: 1px;
           height: 100px;
           background-color: #a4a96b;
+
+          @media screen and (max-width: 1024px) {
+            display: none;
+          }
         }
       }
     }
@@ -95,19 +157,35 @@
       border-radius: 20px;
       display: inline-block;
       margin-bottom: 20px;
+
+      @media screen and (max-width: 1024px) {
+        font-size: 14px;
+      }
     }
 
     &-name {
       font-size: 20px;
       font-weight: 400;
+
+      @media screen and (max-width: 1024px) {
+        font-size: 16px;
+      }
     }
 
     &-photo {
       padding-top: 40px;
+
+      @media screen and (max-width: 1024px) {
+        padding-top: 0;
+      }
     }
 
     &-img {
       border-radius: 20px;
+
+      @media screen and (max-width: 1024px) {
+        width: 350px;
+      }
     }
   }
 }
