--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -3,6 +3,10 @@
     margin-top: 120px;
   }
 
+  @media screen and (max-width: 374px) {
+    margin-top: 140px;
+  }
+
   &__inner {
     text-align: center;
   }
@@ -185,6 +189,10 @@
 
       @media screen and (max-width: 1024px) {
         width: 350px;
+      }
+
+      @media screen and (max-width: 374px) {
+        width: 300px;
       }
     }
   }
