Правка меню, якорные ссылки, ссылки на формы и пинтерест

--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -45,7 +45,9 @@
   }
 
   &--cta {
-    margin: 0 auto;
+    @media screen and (max-width: 1024px) {
+      margin: 0 auto;
+    }
   }
 
   &--scroll-top {
