--- a/css/main.css
+++ b/css/main.css
@@ -283,8 +283,10 @@ a:hover {
     padding: 13px 25px;
   }
 }
-.link-to--cta {
-  margin: 0 auto;
+@media screen and (max-width: 1024px) {
+  .link-to--cta {
+    margin: 0 auto;
+  }
 }
 .link-to--scroll-top {
   padding: 15px;
@@ -398,7 +400,7 @@ a:hover {
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: #a4a96b;
+    background-color: #d3dfc5;
     z-index: 11;
     -webkit-box-align: start;
         -ms-flex-align: start;
@@ -406,18 +408,18 @@ a:hover {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    padding: 30px 30px 0 30px;
+    padding: 20px 15px 0 15px;
   }
   .header__inner--mobile .header__nav-btn {
     position: fixed;
-    right: 30px;
-    top: 40px;
+    right: 15px;
+    top: 20px;
   }
   .header__inner--mobile .header__nav {
     display: block;
-    margin-left: auto;
+    margin-left: -50px;
     padding-top: 100px;
-    padding-right: 70px;
+    padding-right: 35px;
   }
   .header__inner--mobile .header__nav-item {
     margin-bottom: 20px;
