--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -82,22 +82,22 @@
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: $ligth-green;
+    background-color: #d3dfc5;
     z-index: 11;
     align-items: flex-start;
     justify-content: flex-start;
-    padding: 30px 30px 0 30px;
+    padding: 20px 15px 0 15px;
 
     .header__nav-btn {
       position: fixed;
-      right: 30px;
-      top: 40px;
+      right: 15px;
+      top: 20px;
     }
     .header__nav {
       display: block;
-      margin-left: auto;
+      margin-left: -50px;
       padding-top: 100px;
-      padding-right: 70px;
+      padding-right: 35px;
       &-item {
         margin-bottom: 20px;
       }
