--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import './base/mixins';
 @import './base/base';
 
+@import './blocks/preloader';
 @import './blocks/button';
 @import './blocks/header';
 @import './blocks/intro';
